Fix horizontal scroll due to width of credit div

--- a/css/main.css
+++ b/css/main.css
@@ -79,8 +79,9 @@ button {
 	height: 1.5em;
 }
 #credit p {
-	position: absolute;
-	left: 71%;
+	position: relative;
+	/*left: 71%;*/
+	text-align: center;
 }
 #player {
 	margin: 20px auto;
